<resources>
    <string name="app_name">Fake or Fact</string>
    <string name="welcome">Is it fake or fact? You decide!</string>
    <string name="quiz">Quiz Yourself</string>
    <string name="start_game">Start Game</string>
    <string name="join_game">Join Game</string>
    <string name="settings">Settings</string>
    <string name="credit">Dark Mode</string>

    <!-- Quiz Messages -->
    <string name="quiz_title">Choose a Category</string>
    <string name="history">History</string>
    <string name="science">Science</string>
    <string name="art">Art</string>
    <string name="random">Random</string>

    <!-- Quiz Activity Messages -->
    <string name="quiz_question">Hello Empty Question!</string>
    <string name="quiz_fake">Fake</string>
    <string name="quiz_explain">Explain</string>
    <string name="quiz_fact">Fact</string>
    <string name="quiz_timer">0:20</string>
    <string name="quiz_count">Question 1</string>
    <string name="quiz_score">Score: 0</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Quiz Fragment Messages -->
    <string name="frag_score_title">Here is the lineup!</string>
    <string name="frag_player">No Player!</string>
    <string name="frag_player_score">No Score!</string>

    <!-- Start/Join Game Messages -->
    <string name="enter_code">Please enter the game code</string>
    <string name="enter_code_title">Enter Game Code</string>
    <string name="wrong_code">Oops! We cannot find that code. Please make sure it is
            typed correctly or the game still exists</string>
    <string name="enter_game_name">Please enter your codename</string>
    <string name="enter_game_name_title">Enter Codename</string>
    <string name="next_quiz_question">Next Question</string>
    <string name="wait">Waiting for Players…</string>
    <string name="title_code">Code:</string>
    <string name="code">Empty Code!</string>

    <!-- Animation Messages -->
    <string name="correct_ans">You Got it Right!</string>
    <string name="wrong_ans">Oops! Wrong Answer</string>

    <!-- Game End -->
    <string name="game_over">Go to Main Menu</string>
    <string name="coming_soon">You have completed all questions for this category,
        but more are coming soon!</string>

    <!-- Dialogue Box -->
    <string name="contact_box_dialog">If you have any questions, concerns, or would like to
        report an issue with the app, please email us at fakeorfactmobile@gmail.com</string>
    <string name="info_box_dialog">Fake or Fact is a knowledge based trivia game. Test your
        skill by determining whether or not the questions you are presented with
        are fake or fact. Good luck and have fun!</string>
    <string name="info_box_dialog2">Creator: Michael McComas</string>
    <string name="info_box_dialog3">App Version: 1.0.0</string>
    <string name="info_box_dialog4">Credit: 2 icons in this app created by Freepik and Smashicons
        on flaticon.com</string>
    <string name="leave_title">Are you sure you want to leave the game?</string>
    <string name="game_name">Your codename is the name used to identify you as a player! Type any
        name that suits you.</string>
    <string name="game_code">The game code is given when a user creates a game and they begin waiting
        for players. Use the code given on this waiting screen to join the game for a maximum of 4
        players!</string>
    <string name="wrong_dialog">Something went wrong. Please check your internet connection</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">Okay</string>
    <string name="wrong_title">Oops</string>
    <string name="explain">Explanation</string>
    <string name="game_code_title">Game Code</string>
    <string name="game_name_title">Game CodeName</string>
    <string name="dark_mode_box_title">Enable Dark Mode</string>
    <string name="contact_title">Contact Us</string>
    <string name="info_title">About</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_easter_egg">EasterEgg</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cat">OoOo a cat</string>
    <string name="get_cat">Get a Cat</string>
    <string name="eggCongrats">Yay! You found me!</string>

</resources>
