<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="40dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/txt_appName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/btn_quiz"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/quiz"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:elevation="10dp"
        android:textAllCaps="false"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_state"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/btn_joinGame"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/join_game"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:elevation="10dp"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_state"
        app:layout_constraintTop_toBottomOf="@+id/btn_quiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/btn_startGame"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/start_game"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:elevation="10dp"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_state"
        app:layout_constraintTop_toBottomOf="@+id/btn_joinGame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/img_icon"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:srcCompat="@drawable/search"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="2dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/txt_appName"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageButton
        android:id="@+id/img_btn_info"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/info_title"
        android:background="?android:selectableItemBackground"
        app:srcCompat="@mipmap/info"
        android:layout_marginTop="25dp"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/img_btn_dark"/>

    <ImageButton
        android:id="@+id/img_btn_dark"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/credit"
        android:background="?android:selectableItemBackground"
        app:srcCompat="@mipmap/eclipse"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/img_btn_info"
        app:layout_constraintRight_toLeftOf="@+id/img_btn_contact"/>

    <ImageButton
        android:id="@+id/img_btn_contact"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/contact_title"
        android:background="?android:selectableItemBackground"
        app:srcCompat="@mipmap/contact"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/img_btn_dark"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>