<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".game.QuizSelect">

    <TextView
        android:id="@+id/txt_quizChoose"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="top"
        android:text="@string/quiz_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_history"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/history"
        android:textSize="20sp"
        android:elevation="10dp"
        android:textAllCaps="false"
        android:layout_marginTop="80dp"
        android:drawableStart="@drawable/history"
        android:background="@drawable/button_state"
        app:layout_constraintTop_toBottomOf="@+id/txt_quizChoose"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/btn_science"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/science"
        android:textSize="20sp"
        android:elevation="10dp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/science"
        android:background="@drawable/button_state"
        app:layout_constraintTop_toBottomOf="@+id/btn_history"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/btn_art"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/art"
        android:textSize="20sp"
        android:elevation="10dp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/art"
        android:background="@drawable/button_state"
        app:layout_constraintTop_toBottomOf="@+id/btn_science"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_random"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/random"
        android:textSize="20sp"
        android:elevation="10dp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/random"
        android:background="@drawable/button_state"
        app:layout_constraintTop_toBottomOf="@+id/btn_art"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/start_game"
        android:textSize="20sp"
        android:elevation="10dp"
        android:textAllCaps="false"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_state"
        app:layout_constraintTop_toBottomOf="@+id/btn_random"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/img_icon"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:srcCompat="@drawable/search"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="2dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/txt_quizChoose"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ani_historyCheck"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        app:lottie_loop="false"
        app:lottie_autoPlay="false"
        app:lottie_fileName="checkmark.json"
        android:elevation="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_quizChoose"
        app:layout_constraintRight_toRightOf="@id/btn_history" />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ani_scienceCheck"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:lottie_loop="false"
        app:lottie_autoPlay="false"
        app:lottie_fileName="checkmark.json"
        android:elevation="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_history"
        app:layout_constraintRight_toRightOf="@id/btn_science"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ani_artCheck"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:lottie_loop="false"
        app:lottie_autoPlay="false"
        app:lottie_fileName="checkmark.json"
        android:elevation="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_science"
        app:layout_constraintRight_toRightOf="@id/btn_art"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ani_randomCheck"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:lottie_loop="false"
        app:lottie_autoPlay="false"
        app:lottie_fileName="checkmark.json"
        android:elevation="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_art"
        app:layout_constraintRight_toRightOf="@id/btn_random"/>

</androidx.constraintlayout.widget.ConstraintLayout>