<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".game.StartGame"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/txt_startCategory"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_title"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/btn_Start_History"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/history"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:textAlignment="viewStart"
        android:drawableStart="@drawable/history"
        android:background="@drawable/button_state"
        app:layout_constraintTop_toBottomOf="@+id/txt_startCategory"
        app:layout_constraintLeft_toLeftOf="parent" />
    <Button
        android:id="@+id/btn_Start_Science"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/science"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="50dp"
        android:textAlignment="viewStart"
        android:drawableStart="@drawable/science"
        android:background="@drawable/button_state"
        app:layout_constraintTop_toBottomOf="@+id/txt_startCategory"
        app:layout_constraintLeft_toRightOf="@+id/btn_Start_History"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/btn_Start_Art"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/art"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textAlignment="viewStart"
        android:drawableStart="@drawable/art"
        android:background="@drawable/button_state"
        app:layout_constraintTop_toBottomOf="@+id/btn_Start_History"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_Start_Random"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/random"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:textAlignment="viewStart"
        android:drawableStart="@drawable/random"
        android:background="@drawable/button_state"
        app:layout_constraintTop_toBottomOf="@+id/btn_Start_Science"
        app:layout_constraintLeft_toRightOf="@+id/btn_Start_Art"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ani_start_historyCheck"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        app:lottie_loop="false"
        app:lottie_autoPlay="false"
        app:lottie_fileName="checkmark.json"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_startCategory"
        app:layout_constraintRight_toRightOf="@id/btn_Start_History" />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ani_start_scienceCheck"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        app:lottie_loop="false"
        app:lottie_autoPlay="false"
        app:lottie_fileName="checkmark.json"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_startCategory"
        app:layout_constraintRight_toRightOf="@id/btn_Start_Science"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ani_start_artCheck"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        app:lottie_loop="false"
        app:lottie_autoPlay="false"
        app:lottie_fileName="checkmark.json"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_Start_History"
        app:layout_constraintRight_toRightOf="@id/btn_Start_Art"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ani_start_randomCheck"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        app:lottie_loop="false"
        app:lottie_autoPlay="false"
        app:lottie_fileName="checkmark.json"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_Start_Science"
        app:layout_constraintRight_toRightOf="@id/btn_Start_Random"/>
    <EditText
        android:id="@+id/editTxt_start_codeName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:hint="@string/enter_game_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Start_Random"/>
    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/start_game"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_state"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTxt_start_codeName"/>
    <ProgressBar
        android:id="@+id/start_progBar"
        android:layout_marginTop="5dp"
        android:visibility="invisible"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintRight_toRightOf="@id/btn_start_game"
        app:layout_constraintTop_toTopOf="@id/btn_start_game"/>

</androidx.constraintlayout.widget.ConstraintLayout>